Update the Title and Fix CSS Overflow issue

--- a/client/css/groups.css
+++ b/client/css/groups.css
@@ -1,246 +1,215 @@
-@import url("../css/dashboard.css");
+@import url('../css/dashboard.css');
 
-.groups
-{
-    background: #fff;
-    color: black;
-    max-width: 70%;
-    width: 70%;
-    height: 540px;
-    margin-top: 30px;
-    margin-left: 345px;
-    padding: 20px; 
+.groups {
+  background: #fff;
+  color: black;
+  max-width: 70%;
+  width: 70%;
+  height: 540px;
+  margin-top: 30px;
+  margin-left: 345px;
+  padding: 20px;
 }
 
-.title { 
-    color:  rgb(20, 156, 190);
-    text-transform: uppercase;
-    letter-spacing: 2px; 
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 25px; 
-    text-align: center;
-  }
-
-.cards
-{
-    width: 100%;
-    height: 90%;
+.title {
+  color: rgb(20, 156, 190);
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 25px;
+  text-align: center;
 }
 
-.row-1
-{
-    width: 100%;
-    height: 49%;
-    display: flex;
+.cards {
+  width: 100%;
+  height: 90%;
 }
 
-.card-1
-{
-    background: url(../images/programming-1.jpg) no-repeat center;
-    background-size: cover;
-    width: 32%;
-    height: 100%;
+.row-1 {
+  width: 100%;
+  height: 49%;
+  display: flex;
 }
 
-.card-2
-{
-    background: url(../images/cybersecurity-2.jpeg) no-repeat center;
-    background-size: cover;
-    width: 32%;
-    height: 100%;
+.card-1 {
+  background: url(../images/programming-1.jpg) no-repeat center;
+  background-size: cover;
+  width: 32%;
+  height: 100%;
 }
 
-.card-3
-{
-    background: url(../images/business.jpeg) no-repeat center;
-    background-size: cover;
-    width: 32%;
-    height: 100%;
+.card-2 {
+  background: url(../images/cybersecurity-2.jpeg) no-repeat center;
+  background-size: cover;
+  width: 32%;
+  height: 100%;
 }
 
-.group-name
-{
-    background:rgb(224, 212, 33, 0.7);   
-    width: 100%;
-    height: 20%;
-    margin-top: 60.2%;
+.card-3 {
+  background: url(../images/business.jpeg) no-repeat center;
+  background-size: cover;
+  width: 32%;
+  height: 100%;
 }
 
-h4
-{
-    text-align: center;
-    padding-top: 0.8rem;
-    letter-spacing: 1.2px;
+.group-name {
+  background: rgb(224, 212, 33, 0.7);
+  width: 100%;
+  height: 20%;
+  margin-top: 55.5%;
 }
 
-.group-name:hover
-{
-    cursor: pointer;
-    background:rgb(224, 212, 33); 
-    transition: all 0.1s ease-in-out;
+h4 {
+  text-align: center;
+  padding-top: 0.8rem;
+  letter-spacing: 1.2px;
 }
 
-.card-1, .card-2
-{
-    margin-right: 2%;
+.group-name:hover {
+  cursor: pointer;
+  background: rgb(224, 212, 33);
+  transition: all 0.1s ease-in-out;
 }
 
-.row-2
-{
-    width: 100%;
-    height: 48.7%;
-    margin-top: 1%;
-    display: flex;
+.card-1,
+.card-2 {
+  margin-right: 2%;
 }
 
-.card-4
-{
-    background: url(../images/photography-1.jfif) no-repeat bottom;
-    background-size: cover;
-    width: 32%;
-    height: 100%;
+.row-2 {
+  width: 100%;
+  height: 48.7%;
+  margin-top: 1%;
+  display: flex;
 }
 
-.card-5
-{
-    background: url(../images/sports-1.jpg) no-repeat center;
-    background-size: cover;
-    width: 32%;
-    height: 100%;
+.card-4 {
+  background: url(../images/photography-1.jfif) no-repeat bottom;
+  background-size: cover;
+  width: 32%;
+  height: 100%;
 }
 
-.card-6
-{
-    background: url(../images/cinema-3.jpeg) no-repeat center;
-    background-size: cover;
-    width: 32%;
-    height: 100%;
+.card-5 {
+  background: url(../images/sports-1.jpg) no-repeat center;
+  background-size: cover;
+  width: 32%;
+  height: 100%;
 }
 
-.card-4, .card-5
-{
-    margin-right: 2%;
+.card-6 {
+  background: url(../images/cinema-3.jpeg) no-repeat center;
+  background-size: cover;
+  width: 32%;
+  height: 100%;
 }
 
+.card-4,
+.card-5 {
+  margin-right: 2%;
+}
 
 /**
 * modal
 **/
 
-
-.modal 
-{
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    z-index: 5;
-    opacity: 0;
-    transition-duration: 0s;
-    transition-property: opacity;
-    visibility: hidden;
+.modal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 5;
+  opacity: 0;
+  transition-duration: 0s;
+  transition-property: opacity;
+  visibility: hidden;
 }
 
-.modal-content 
-{
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    background: #EFEFEF;
-    padding: 1rem 1.5rem;
-    width: 40%;
-    color: black;
-    transform: translateX(-50%);
+.modal-content {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  background: #efefef;
+  padding: 1rem 1.5rem;
+  width: 40%;
+  color: black;
+  transform: translateX(-50%);
 }
 
-.modal-content h2
-{
+.modal-content h2 {
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 0.1rem;
   color: rgb(20, 156, 190);
 }
 
-.msg-space
-{
-    width: 100%;
-    height: 88%;
-    background: #fff;
-    border: solid 1px rgba(34, 34, 34, 0.85);
+.msg-space {
+  width: 100%;
+  height: 88%;
+  background: #fff;
+  border: solid 1px rgba(34, 34, 34, 0.85);
 }
 
-.show-modal 
-{
+.show-modal {
   opacity: 1;
   visibility: visible;
 }
 
-
-.show-modal .modal-content
-{
+.show-modal .modal-content {
   transform: translateX(0);
   transition: transform 0.25s;
 }
 
-.send-msg
-{
-    margin-top: 4%;
-    margin-left: 6%;
+.send-msg {
+  margin-top: 4%;
+  margin-left: 6%;
 }
 
-.send-msg input
-{
-    padding: 10px;
-    outline: none;
-    width: 72.5%;
-    font-family: 'Montserrat';
-    font-size: 0.90rem;
-    font-weight: bold;
-    color: #06080A;
-    letter-spacing: 0.1rem;
+.send-msg input {
+  padding: 10px;
+  outline: none;
+  width: 72.5%;
+  font-family: 'Montserrat';
+  font-size: 0.9rem;
+  font-weight: bold;
+  color: #06080a;
+  letter-spacing: 0.1rem;
 }
 
-.send-msg input::placeholder 
-{
-  font-size: 0.90rem;
+.send-msg input::placeholder {
+  font-size: 0.9rem;
   font-weight: 300;
   letter-spacing: 0.1rem;
   color: #6c7882;
 }
 
-.send-btn
-{
-    padding: 10.9px;
-    width: 6rem;
-    font-size: 0.92rem;
-    font-weight: bold;
+.send-btn {
+  padding: 10.9px;
+  width: 6rem;
+  font-size: 0.92rem;
+  font-weight: bold;
 }
 
-.send-btn:hover
-{
-    cursor: pointer;
+.send-btn:hover {
+  cursor: pointer;
 }
 
-.left
-{
-    float: left;
+.left {
+  float: left;
 }
 
-.right
-{
-    margin-left: 12rem;
+.right {
+  margin-left: 12rem;
 }
 
-.send-msg .fa
-{
-    color: rgb(7, 106, 131);
-    font-size: 1.1rem;
+.send-msg .fa {
+  color: rgb(7, 106, 131);
+  font-size: 1.1rem;
 }
 
-.group-name
-{
-    text-transform: uppercase;
+.group-name {
+  text-transform: uppercase;
 }
